# cubr

./: .gitignore  CHANGELOG.md  LICENSE  app.db  cubr.cabal
app/: App.hs  DB.hs  Main.hs  Models.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
