cabal-version:      3.0
name:               cubr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Franchini
maintainer:         matchewf11@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cubr
    import:           warnings
    main-is:          Main.hs
    other-modules: DB, App, Models

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.3.0
                    , sqlite-simple
                    , warp
                    , wai
                    , http-types
                    , servant
                    , servant-server
                    , aeson
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
